# SkullBaseNavigation

./: .coverage  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  README.rst  form.py  launch.bat  launch.sh  launch_bk.sh  launch_pivot.sh  launch_plus.sh  launch_plus_pivot.sh  setup.cfg  setup.py  skullbasenavigation.py  tox.ini
New folder/: Plus_pyIGTLink_Only.xml
PLUS_settings/: PlusDeviceSet_SavedDataset.xml  PlusDeviceSet_Server_BkProFocusOem.xml  PlusDeviceSet_Server_StealthLinkTracker_BK5000.xml  PlusDeviceSet_Server_StealthLinkTracker_Ultrasonix.xml  PlusDeviceSet_Server_StealthLinkTracker_pyIGTLink.xml  PlusDeviceSet_Server_StealthLinkTracker_pyIGTLink_Image_Calibration.xml  PlusDeviceSet_fCal_StealthLinkTracker_Ultrasonix.xml  Plus_SBN_Navigation.xml  Plus_SBN_Pivot_Calibration.xml
config/: default.json
doc/: .gitignore  conf.py
models/: BK_Probe.stl
skullbasenavigation/: CMakeLists.txt  __init__.py  __main__.py  basic_slicelet.py  config.py  pivot_slicelet.py  sbn.py  sbn_slicelet.py  skullbasenavigation.py  slicer_functions.py  test_slicer_functions.py  testing_slicer_functions.py
skullbasenavigation/Testing/Python/: CMakeLists.txt  testing_slicer_functions.py
skullbasenavigation/sbn/: CMakeLists.txt  config.py  functions.py  testing_slicer_functions.py  workflow.py
skullbasenavigation/test/: test_slicer_functions.py
skullbasenavigation/ui/: __init__.py  form.py  form.ui  skullbasenavigation_command_line.py  skullbasenavigation_demo.py
tests/: pylintrc  test_sbn.py  test_skullbasenavigation.py
